bugfix/From field at send tokens  overflow

--- a/src/components/StaticText/StaticText.module.scss
+++ b/src/components/StaticText/StaticText.module.scss
@@ -5,4 +5,5 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 150%;
+    word-break: break-all;
 }
