--- a/src/components/Wallet/Wallet.module.scss
+++ b/src/components/Wallet/Wallet.module.scss
@@ -21,6 +21,7 @@
             font-weight: normal;
             font-size: 16px;
             line-height: 150%;
+            word-break: break-all;
         }
     }
 }
